<resources>
    <string name="app_name">Travel info</string>
    <string name="going_to">Going to:</string>

    <string-array name="End">
        <item>Waverley station</item>
        <item>Haymarket</item>
        <item>Edinburgh Gateway</item>
        <item>Edinburgh Park</item>
    </string-array>

    <string name="time_range">Time range:</string>
    <string name="proceed">Proceed</string>
    <string name="back">Back</string>
    <string name="your_travel_plan">Your travel plan</string>

    <string name="starting_from">Starting from:</string>
    <string name="after">After:</string>
    <string-array name="StartingTime">
        <item>00:00</item>
        <item>02:00</item>
        <item>04:00</item>
        <item>06:00</item>
        <item>08:00</item>
        <item>10:00</item>
        <item>12:00</item>
        <item>14:00</item>
        <item>16:00</item>
        <item>18:00</item>
        <item>20:00</item>
        <item>22:00</item>
    </string-array>
    <string name="before">Before:</string>
    <string-array name="EndingTime">
        <item>00:00</item>
        <item>02:00</item>
        <item>04:00</item>
        <item>06:00</item>
        <item>08:00</item>
        <item>10:00</item>
        <item>12:00</item>
        <item>14:00</item>
        <item>16:00</item>
        <item>18:00</item>
        <item>20:00</item>
        <item>22:00</item>
    </string-array>

    <string-array name="Start">
        <item>Waverley station</item>
        <item>Haymarket</item>
        <item>Edinburgh Gateway</item>
        <item>Edinburgh Park</item>
    </string-array>
    <string name="Proceed">Proceed</string>
    <string name="train_schedules">Train schedules</string>
    <string-array name="Schedules">
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
    </string-array>
    <string name="title_activity_waiting_lobby">WaitingLobby</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_train_departs_at">Your train departs at:</string>
    <string name="selectedTime">selectedTime</string>
    <string name="you_still_have">You still have:</string>
    <string name="remainingTime">remainingTime</string>
    <string name="title_activity_waiti_lobby">WaitiLobby</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wait_lobby">WaitLobby</string>
</resources>
